[package]
name = "picomine"
version = "0.1.0"
authors = ["Chris Roberts"]
edition = "2021"
description = "2D sandbox game"
repository = "https://github.com/krobbi/picomine"
license-file = "LICENSE.txt"
categories = ["games"]
publish = false

[dependencies]
image = { version = "0.25.4", default-features = false, features = ["png"] }
minifb = "0.27.0"
noise = "0.9.0"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
